@@ -8,6 +8,7 @@
 #include "pg/Connection.hxx"
 
 #include <assert.h>
+#include <string.h>
 #include <stdlib.h>
 
 bool
@@ -73,24 +74,28 @@ pg_expire_jobs(Pg::Connection &db, const char *except_node_name)
 }
 
 int
-pg_next_scheduled_job(Pg::Connection &db, const char *plans_include,
+pg_next_scheduled_job(Pg::Connection &db, bool has_enabled_column,
+                      const char *plans_include,
                       long *span_r)
 {
     assert(plans_include != nullptr && *plans_include == '{');
 
-    const auto result =
-        db.ExecuteParams("SELECT EXTRACT(EPOCH FROM (MIN(scheduled_time) - now())) "
-                         "FROM jobs WHERE node_name IS NULL AND time_done IS NULL AND exit_status IS NULL "
-                         "AND scheduled_time IS NOT NULL "
+    char sql[1024] = "SELECT EXTRACT(EPOCH FROM (MIN(scheduled_time) - now())) "
+        "FROM jobs WHERE node_name IS NULL AND time_done IS NULL AND exit_status IS NULL "
+        "AND scheduled_time IS NOT NULL "
 
-                         /* ignore jobs which are scheduled deep into
-                            the future; some Workshop clients (such as
-                            URO) do this, and it slows down the
-                            PostgreSQL query */
-                         "AND scheduled_time < now() + '1 year'::interval "
+        /* ignore jobs which are scheduled deep into
+           the future; some Workshop clients (such as
+           URO) do this, and it slows down the
+           PostgreSQL query */
+        "AND scheduled_time < now() + '1 year'::interval "
 
-                         "AND plan_name = ANY ($1::TEXT[]) ",
-                         plans_include);
+        "AND plan_name = ANY ($1::TEXT[])";
+
+    if (has_enabled_column)
+        strcat(sql, " AND enabled");
+
+    const auto result = db.ExecuteParams(sql, plans_include);
     if (!result.IsQuerySuccessful()) {
         fprintf(stderr, "SELECT on jobs failed: %s\n",
                 result.GetErrorMessage());
@@ -109,7 +114,7 @@ pg_next_scheduled_job(Pg::Connection &db, const char *plans_include,
 }
 
 Pg::Result
-pg_select_new_jobs(Pg::Connection &db,
+pg_select_new_jobs(Pg::Connection &db, bool has_enabled_column,
                    const char *plans_include, const char *plans_exclude,
                    const char *plans_lowprio,
                    unsigned limit)
@@ -118,16 +123,22 @@ pg_select_new_jobs(Pg::Connection &db,
     assert(plans_exclude != nullptr && *plans_exclude == '{');
     assert(plans_lowprio != nullptr && *plans_lowprio == '{');
 
+    char sql[1024] = "SELECT id,plan_name,args,syslog_server "
+        "FROM jobs "
+        "WHERE node_name IS NULL "
+        "AND time_done IS NULL AND exit_status IS NULL "
+        "AND (scheduled_time IS NULL OR now() >= scheduled_time) "
+        "AND plan_name = ANY ($1::TEXT[]) "
+        "AND plan_name <> ALL ($2::TEXT[] || $3::TEXT[]) ";
+
+    if (has_enabled_column)
+        strcat(sql, "AND enabled ");
+
+    strcat(sql, "ORDER BY priority, time_created "
+           "LIMIT $4");
+
     auto result =
-        db.ExecuteParams("SELECT id,plan_name,args,syslog_server "
-                         "FROM jobs "
-                         "WHERE node_name IS NULL "
-                         "AND time_done IS NULL AND exit_status IS NULL "
-                         "AND (scheduled_time IS NULL OR now() >= scheduled_time) "
-                         "AND plan_name = ANY ($1::TEXT[]) "
-                         "AND plan_name <> ALL ($2::TEXT[] || $3::TEXT[]) "
-                         "ORDER BY priority, time_created "
-                         "LIMIT $4",
+        db.ExecuteParams(sql,
                          plans_include, plans_exclude, plans_lowprio, limit);
     if (!result.IsQuerySuccessful())
         fprintf(stderr, "SELECT on jobs failed: %s\n",
@@ -137,14 +148,19 @@ pg_select_new_jobs(Pg::Connection &db,
 }
 
 int
-pg_claim_job(Pg::Connection &db, const char *job_id, const char *node_name,
+pg_claim_job(Pg::Connection &db, bool has_enabled_column,
+             const char *job_id, const char *node_name,
              const char *timeout)
 {
+    char sql[1024] = "UPDATE jobs "
+        "SET node_name=$1, node_timeout=now()+$3::INTERVAL "
+        "WHERE id=$2 AND node_name IS NULL";
+
+    if (has_enabled_column)
+        strcat(sql, " AND enabled");
+
     const auto result =
-        db.ExecuteParams("UPDATE jobs "
-                         "SET node_name=$1, node_timeout=now()+$3::INTERVAL "
-                         "WHERE id=$2 AND node_name IS NULL",
-                         node_name, job_id, timeout);
+        db.ExecuteParams(sql, node_name, job_id, timeout);
     if (!result.IsCommandSuccessful()) {
         fprintf(stderr, "UPDATE/claim on jobs failed: %s\n",
                 result.GetErrorMessage());
