@@ -28,7 +28,7 @@ class WorkshopQueue final : private Pg::AsyncConnectionHandler {
 
     Pg::AsyncConnection db;
 
-    bool has_log_column;
+    bool has_enabled_column, has_log_column;
 
     bool disabled = false, running = false;
 
@@ -63,6 +63,10 @@ public:
     gcc_pure
     const char *GetNodeName() const {
         return node_name.c_str();
+    }
+
+    bool HasEnabledColumn() const {
+        return has_enabled_column;
     }
 
     bool HasLogColumn() const {
